# ds4net

./: .gitignore  Cargo.toml  README.md  server.go
client/: client-poc.py  win-test.py
client/rust-client/: Cargo.toml
client/rust-client/src/: main.rs  vigem_api_gen.rs
old-servers/: play.py
old-servers/go/: server.go
server/: play.py  server-poc.py
server/C/: server-poc-libev.c  server-poc-poll.c
server/rust/: Cargo.toml
server/rust/src/: ds4.rs  main.rs
src/: common.rs  common_input.rs  common_output.rs  controls_ds4.rs  controls_dsense.rs  ds4.rs  ds4net@.service  dsense.rs  input_ds4.rs  input_dsense.rs  main.rs  udevmon.rs
