[package]
name = "ds4net-rust"
version = "0.1.0"
authors = ["Yaroslav Isakov <yaroslav.isakov@gmail.com>"]
edition = "2018"
resolver = "2"

#[profile.release]
#lto = true
#codegen-units = 1
#panic = 'abort'

[dependencies]
crc = "1.8.1"
crossbeam-channel = "0.5"
parking_lot = "0.11"
signal-hook = "0.3"
#flume = { version = "0.10", default-features = false }
