[package]
name = "ds4net-rust"
version = "0.1.0"
authors = ["Yaroslav Isakov <yaroslav.isakov@gmail.com>"]
edition = "2021"
#resolver = "2"

#[profile.release]
#lto = true
#codegen-units = 1
#panic = 'abort'

[dependencies]
crc = "3.0.0"
crossbeam-channel = "0.5"
parking_lot = "0.12"
signal-hook = "0.3"
mio = { version = "0.8", features = ["os-ext"] }
udev = { version = "0.6", features = ["mio08"] }
#flume = { version = "0.10", default-features = false }
